tests/ui/errors/snapshots/container_equals_rejects_bound_mismatched_user_equals.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid comparison
    ╭─[main.lis:11:3]
 10 │ fn test<T: Comparable>(a: Slice<Box<T>>, b: Slice<Box<T>>) -> bool {
 11 │   a.equals(b)
    ·   ┬
    ·   ╰── cannot be compared
 12 │ }
    ╰────
  help: `Slice<Box<T>>` cannot be compared because a struct containing non-comparable fields cannot be compared · code: [infer.not_equatable]
