tests/ui/errors/snapshots/desugar_pipeline_with_lambda.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid pipeline
   ╭─[test.lis:1:18]
 1 │ fn test() { x |> |y| y * 2; }
   ·                  ────┬────
   ·                      ╰── expected function
   ╰────
  help: Pipeline only supports functions (not lambdas) · code: [parse.invalid_pipeline_target]
