tests/ui/errors/snapshots/display_on_function.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[display]` not on a struct or enum
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[display]
   · ─────┬────
   ·      ╰── no fields or variants to print here
 3 │ fn run() -> int {
   ╰────
  help: Only a struct or enum can be marked `#[display]` · code: [attribute.display_not_a_struct_or_enum]
