tests/ui/errors/snapshots/display_on_impl_method.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[display]` not on a struct or enum
   ╭─[test.lis:5:3]
 4 │ impl Widget {
 5 │   #[display]
   ·   ─────┬────
   ·        ╰── no fields or variants to print here
 6 │   fn build() -> int {
   ╰────
  help: Only a struct or enum can be marked `#[display]` · code: [attribute.display_not_a_struct_or_enum]
